--- a/cabal.project
+++ b/cabal.project
@@ -1,7 +1,10 @@
 packages:
-    3rd-parties/linear-smc-2.2.3
-    hs-pkgs/yul-dsl
-    hs-pkgs/yul-dsl-linear-smc
-    hs-pkgs/yol-suite
-    hs-pkgs/yol-suite/testsuite
-    examples/demo
+  3rd-parties/linear-smc-2.2.3
+  hs-pkgs/yul-dsl
+  hs-pkgs/yul-dsl-linear-smc
+  hs-pkgs/yol-suite
+  hs-pkgs/yol-suite/testsuite
+  examples/demo
+
+package linear-smc
+  ghc-options: -Wno-all
