--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -32,6 +32,7 @@ library
   hs-source-dirs:   src
   exposed-modules:  Data.NProducts
                     Data.NTuple
+                    Data.TypeBools
                     YulDSL.Core.ContractABI.Types
                     YulDSL.Core.ContractABI.Coerce
                     YulDSL.Core.ContractABI
