--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -24,11 +24,11 @@ description:    YulDSL provides an EDSL called 'YulDSL' for transpiling Haskell 
 common basic-options
     default-language:     GHC2024
     ghc-options:          -Wall
+                          -Wunused-packages
     default-extensions:   UnicodeSyntax
 
 common yolc-deps
   build-depends:    base >= 4.20.0.0 && < 666,
-                    bytestring >= 0.11,
                     linear-base >= 0.3.1,
                     linear-smc >= 2.2.3,
                     yul-dsl
@@ -36,10 +36,7 @@ common yolc-deps
 library
   import:           basic-options, yolc-deps
   hs-source-dirs:   src
-  build-depends:    text >= 2.0.1,
-                    cereal >= 0.5.8,
-                    constraints >= 0.13,
-                    containers >= 0.6.7
+  build-depends:    constraints >= 0.13
   exposed-modules:  YulDSL.LinearSMC.Categories
                     YulDSL.LinearSMC
                     Prelude.YulDSL.LinearSMC
