--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -25,15 +25,13 @@ build-type:     Simple
 common basic-options
   default-language: GHC2024
   ghc-options:      -Wall
+                    -Wunused-packages
   build-depends:    base >=4.20.0.0 && < 666
 
 library
   import:           basic-options
   hs-source-dirs:   src
-  exposed-modules:  Data.NProducts
-                    Data.NTuple
-                    Data.TypeBools
-                    YulDSL.Core.ContractABI.Types
+  exposed-modules:  YulDSL.Core.ContractABI.Types
                     YulDSL.Core.ContractABI.Coerce
                     YulDSL.Core.ContractABI
                     YulDSL.Core.YulCat
@@ -41,13 +39,13 @@ library
                     YulDSL.Core
                     YulDSL.Eval
                     YulDSL.CodeGens.YulGen
-
   other-modules:    YulDSL.CodeGens.Yul.Internal.CodeFormatters
                     YulDSL.CodeGens.Yul.Internal.CodeGen
                     YulDSL.CodeGens.Yul.Internal.ABICodec
                     YulDSL.CodeGens.Yul.Internal.FunctionGen
                     YulDSL.CodeGens.Yul.Internal.ObjectGen
-  build-depends:    bytestring >= 0.11,
+  build-depends:    eth-abi ^>= 0.1.0.0,
+                    bytestring >= 0.11,
                     text >= 2.0.1,
                     constraints >= 0.13,
                     containers >= 0.6.7,
