--- a/hs-pkgs/eth-abi/eth-abi.cabal
+++ b/hs-pkgs/eth-abi/eth-abi.cabal
@@ -29,16 +29,19 @@ library
                     Ethereum.ContractABI.ABITypeable
                     Ethereum.ContractABI.CoreType.BOOL
                     Ethereum.ContractABI.CoreType.INTx
+                    Ethereum.ContractABI.CoreType.ADDR
                     Ethereum.ContractABI.CoreType.NP
                     Ethereum.ContractABI.ExtendedType.TUPLEn
-  build-depends:    constraints >= 0.14
-  --                bytestring >= 0.11,
+                    Ethereum.ContractABI.ExtendedType.SELECTOR
+                    Ethereum.ContractABI
+  build-depends:    constraints >= 0.14,
+                    bytestring >= 0.11,
+                    crypton >= 0.32,
+                    memory >= 0.18.0
   --                   text >= 2.0.1,
   --                   constraints >= 0.13,
   --                   containers >= 0.6.7,
   --                   mtl >= 2.3.1,
-  --                   crypton >= 0.32,
-  --                   memory >= 0.18.0
 
 Test-Suite test-eth-abi
   import:           basic-options
