--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -59,9 +59,10 @@
 
 - extensions:
   - name: [ RequiredTypeArguments ]
-- ignore: {name: "Use camelCase"}
-- ignore: {name: "Use bimap"} # TODO, use linear-base?
-- ignore: {name: "Use head"}
+- ignore: { name: "Use camelCase" }
+- ignore: { name: "Use bimap" } # TODO, use linear-base?
+- ignore: { name: "Use head" }
+- ignore: { name: "Redundant bracket" }
 
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
