call'l works now, kinda;need to remove the dummy unit

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -63,6 +63,7 @@
 - ignore: { name: "Use bimap" } # TODO, use linear-base?
 - ignore: { name: "Use head" }
 - ignore: { name: "Redundant bracket" }
+- ignore: { name: "Avoid lambda" }
 
 # Define some custom infix operators
 # - fixity: infixr 3 ~^#^~
