reorganize yul-dsl-linear-smc prelude

--- a/examples/demo/yol-demo.cabal
+++ b/examples/demo/yol-demo.cabal
@@ -22,7 +22,7 @@ common yol-module-options
                           ImplicitPrelude
     mixins:               base hiding (Prelude),
                           base (Prelude as Prelude.Base),
-                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
+                          yul-dsl-linear-smc (Prelude.YulDSL as Prelude),
                           yul-dsl-linear-smc
     build-depends:        base >= 4.13 && < 666,
                           text >= 2.0.1,
