--- a/hs-pkgs/yol-suite/templates/runyol.cabal
+++ b/hs-pkgs/yol-suite/templates/runyol.cabal
@@ -13,7 +13,7 @@ common yol-module-options
                           -Wno-name-shadowing
     mixins:               base hiding (Prelude),
                           base (Prelude as Prelude.Base),
-                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
+                          yul-dsl-linear-smc (Prelude.YulDSL as Prelude),
                           yul-dsl-linear-smc
     build-depends:        base >= 4.13 && < 666,
                           bytestring >= 0.11,
