wip: consolidate, and prepare for storage references.

--- a/hs-pkgs/eth-abi/eth-abi.cabal
+++ b/hs-pkgs/eth-abi/eth-abi.cabal
@@ -33,6 +33,7 @@ library
                     Ethereum.ContractABI.ABITypeCoercible
                     Ethereum.ContractABI.ExtendedType.TUPLEn
                     Ethereum.ContractABI.ExtendedType.SELECTOR
+                    Ethereum.ContractABI.ExtendedType.Maybe
                     Ethereum.ContractABI
   other-modules:    Internal.Data.Type.Bool
                     Internal.Data.Type.List
