--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -40,7 +40,7 @@ library
                     YulDSL.CodeGens.YulGen
   other-modules:    YulDSL.CodeGens.Yul.Internal.CodeFormatters
                     YulDSL.CodeGens.Yul.Internal.CodeGen
-                    YulDSL.CodeGens.Yul.Internal.ABICodec
+                    YulDSL.CodeGens.Yul.Internal.ABICodecGen
                     YulDSL.CodeGens.Yul.Internal.FunctionGen
                     YulDSL.CodeGens.Yul.Internal.ObjectGen
   build-depends:    eth-abi ^>= 0.1.0.0,
