--- a/.stylish-haskell.yaml
+++ b/.stylish-haskell.yaml
@@ -239,8 +239,7 @@ newline: native
 #
 # No language extensions are enabled by default.
 # language_extensions:
-  # - TemplateHaskell
-  # - QuasiQuotes
+#  - RequiredTypeArguments
 
 # Attempt to find the cabal file in ancestors of the current directory, and
 # parse options (currently only language extensions) from that.
