--- a/hs-pkgs/eth-abi/eth-abi.cabal
+++ b/hs-pkgs/eth-abi/eth-abi.cabal
@@ -37,10 +37,10 @@ library
                     Ethereum.ContractABI
   other-modules:    Internal.Data.Type.Bool
                     Internal.Data.Type.List
-  build-depends:    constraints >= 0.14,
-                    bytestring >= 0.11,
+  build-depends:    bytestring >= 0.11,
                     crypton >= 0.32,
-                    memory >= 0.18.0
+                    memory >= 0.18.0,
+                    cereal
 
 Test-Suite test-eth-abi
   import:           basic-options
