more comments to Fn and rename to uncurry'lp

--- a/hs-pkgs/yol-suite/templates/runyol.cabal
+++ b/hs-pkgs/yol-suite/templates/runyol.cabal
@@ -6,6 +6,7 @@ build-type:     Simple
 common yol-module-options
     default-language:     GHC2024
     default-extensions:   LinearTypes
+                          ImpredicativeTypes
                           BlockArguments
                           OverloadedStrings
                           UnicodeSyntax
