--- a/examples/demo/yol-demo.cabal
+++ b/examples/demo/yol-demo.cabal
@@ -2,7 +2,7 @@ Cabal-Version:  3.0
 name:           yol-demo
 version:        0.1
 category:       control
-synopsis:       Examples built with yolc (A YulDSL Compiler)
+synopsis:       Examples built with yolc (A YulDSL/Haskell Compiler)
 license:        LGPL-3.0-or-later
 license-file:   LICENSE
 author:         Miao, ZhiCheng
@@ -15,6 +15,7 @@ common yol-module-options
     ghc-options:          -Wall
                           -Wno-name-shadowing
     default-extensions:   LinearTypes
+                          ImpredicativeTypes
                           BlockArguments
                           OverloadedStrings
                           UnicodeSyntax
