--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -29,15 +29,17 @@ common basic-options
     default-language:     GHC2024
     ghc-options:          -Wall
                           -Wunused-packages
-    default-extensions:   LinearTypes
-                          TypeFamilies
+    default-extensions:   TypeFamilies
                           UnicodeSyntax
                           BlockArguments
                           ImpredicativeTypes
+                          LinearTypes
+                          RequiredTypeArguments
     build-depends:        base >= 4.20.0.0 && < 666
 
 library
-  import:           basic-options
+  import:             basic-options
+  default-extensions: NoImplicitPrelude
   hs-source-dirs:   src
   build-depends:    constraints >= 0.13,
                     linear-base >= 0.3.1,
@@ -46,6 +48,10 @@ library
   exposed-modules:  Control.Category.Constrained.YulDSL.LinearSMC
                     Data.MPOrd.YulDSL.LinearSMC
                     Data.Num.YulDSL.LinearSMC
+                    YulDSL.Effects.LinearSMC.LinearPort
+                    YulDSL.Effects.LinearSMC.LinearFn
+                    YulDSL.Effects.LinearSMC.LinearPipeline
+                    YulDSL.Effects.LinearSMC.LinearThread
                     YulDSL.Effects.LinearSMC
                     Prelude.YulDSL
 
