WIP: linear monad

--- a/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
+++ b/hs-pkgs/yul-dsl-linear-smc/yul-dsl-linear-smc.cabal
@@ -49,6 +49,7 @@ library
                     Data.MPOrd.YulDSL.LinearSMC
                     Data.Num.YulDSL.LinearSMC
                     YulDSL.Effects.LinearSMC.LinearPort
+                    YulDSL.Effects.LinearSMC.LinearYulCat
                     YulDSL.Effects.LinearSMC.LinearFn
                     YulDSL.Effects.LinearSMC.LinearPipeline
                     YulDSL.Effects.LinearSMC.LinearThread
