--- a/hs-pkgs/yul-dsl/yul-dsl.cabal
+++ b/hs-pkgs/yul-dsl/yul-dsl.cabal
@@ -34,6 +34,7 @@ common basic-options
 library
   import:           basic-options
   default-extensions: TypeFamilies
+  --
   hs-source-dirs:   src
   exposed-modules:  YulDSL.Core.YulCat
                     YulDSL.Core.Fn
@@ -55,8 +56,10 @@ library
                     mtl >= 2.3.1
 
 Test-Suite test-yul-dsl
-  import:           basic-options
-  ghc-options:      -Wno-missing-signatures
+  import:             basic-options
+  default-extensions: BlockArguments
+  ghc-options:        -Wno-missing-signatures
+  --
   type:             exitcode-stdio-1.0
   build-depends:    QuickCheck >=2.13,
                     hspec >=2.11,
